# Object-Tracking-Laser-Pointing-System-

./: README.md
laptop/ros2_ws/src/pan_tilt_tracker/: CMakeLists.txt  package.xml
laptop/ros2_ws/src/pan_tilt_tracker/config/: pan_tilt_tracker.yaml
laptop/ros2_ws/src/pan_tilt_tracker/launch/: pan_tilt_tracker.launch.py
laptop/ros2_ws/src/pan_tilt_tracker/src/: pan_tilt_tracker_node.cpp
laptop/ros2_ws/src/yolo_bridge/: package.xml  setup.cfg  setup.py
laptop/ros2_ws/src/yolo_bridge/yolo_bridge/: yolo_node.py
rpi/ros2_ws/src/laser_always_on/: package.xml  setup.cfg  setup.py
rpi/ros2_ws/src/laser_always_on/laser_always_on/: laser_always_on_node.py
rpi/ros2_ws/src/pan_tilt_servo/: CMakeLists.txt  package.xml
rpi/ros2_ws/src/pan_tilt_servo/include/pan_tilt_servo/: pan_tilt_servo_node.hpp
rpi/ros2_ws/src/pan_tilt_servo/launch/: pan_tilt_servo.launch.py
rpi/ros2_ws/src/pan_tilt_servo/src/: pan_tilt_servo_node.cpp
weight/: yolov5n.pt
