<?xml version="1.0"?>
<package format="3">
  <name>pan_tilt_tracker</name>
  <version>0.0.1</version>
  <description>Pan-tilt servo tracker for laser + tennis ball using YOLOv5 detections and red laser compensation</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
